Added new variable for SLES documentation links.

--- a/modules/administration/pages/disconnected-setup.adoc
+++ b/modules/administration/pages/disconnected-setup.adoc
@@ -18,7 +18,7 @@ Your RMT or SMT instance must be used to manage the {productname} Server directl
 It cannot be used to manage a second RMT or SMT instance, in a cascade.
 ====
 
-For more information on RMT, see https://documentation.suse.com/sles/15-SP4/html/SLES-all/book-rmt.html.
+For more information on RMT, see {sles-base-os-documentation}/book-rmt.html.
 
 
 == Synchronize RMT
@@ -42,7 +42,7 @@ yast2 rmt
 ----
 . Follow the prompts to complete installation.
 
-For more information on setting up RMT, see https://documentation.suse.com/sles/15-SP4/html/SLES-all/book-rmt.html.
+For more information on setting up RMT, see {sles-base-os-documentation}/book-rmt.html.
 
 
 
@@ -145,7 +145,8 @@ Then mirror the channels, and export.
 Other distributions, or architectures, can be enabled.
 For more information about enabling product channels or repositories to be mirrored, see the documentation:
 
-RMT:: https://documentation.suse.com/sles/15-SP4/html/SLES-all/cha-rmt-mirroring.html#sec-rmt-mirroring-enable-disable
+RMT:: {sles-base-os-documentation}/cha-rmt-mirroring.html#sec-rmt-mirroring-enable-disable
+
 SMT:: https://documentation.suse.com/sles/12-SP5/single-html/SLES-smt/index.html#smt-mirroring-manage-domirror
 
 
