--- a/modules/client-configuration/pages/client-upgrades-major.adoc
+++ b/modules/client-configuration/pages/client-upgrades-major.adoc
@@ -97,7 +97,7 @@ To switch from the old SLE{nbsp}12{nbsp} base channel to the new SLE{nbsp}15 cha
 . Select the [systemitem]``SLE-Product-SLES15-SP2-Pool for x86_64`` base channel.
 
 . OPTIONAL: Select any [guimenu]``Add-On System Types``.
-    For more information, see https://documentation.suse.com/sles/15-SP4/html/SLES-all/article-modules.html.
+    For more information, see {sles-base-os-documentation}/article-modules.html.
 
 . Click btn:[Create Activation Key].
 
