--- a/modules/client-configuration/pages/client-upgrades-product-migration.adoc
+++ b/modules/client-configuration/pages/client-upgrades-product-migration.adoc
@@ -18,7 +18,7 @@ You can also migrate openSUSE Leap to a later minor version or to the correspond
 In {sles}{nbsp}12 and later, {suse} supports service pack skipping if {scc} provides it.
 For example, you can upgrade from {sles}{nbsp}15 to SP2, without installing SP1.
 
-For supported {sles} upgrade paths, see https://documentation.suse.com/sles/15-SP4/html/SLES-all/cha-upgrade-paths.html#sec-upgrade-paths-supported.
+For supported {sles} upgrade paths, see {sles-base-os-documentation}/cha-upgrade-paths.html#sec-upgrade-paths-supported.
 
 
 [NOTE]
