--- a/modules/installation-and-upgrade/pages/install-vm.adoc
+++ b/modules/installation-and-upgrade/pages/install-vm.adoc
@@ -43,7 +43,7 @@ Find the {minimalsles} image at https://download.suse.com/.
 
 [NOTE]
 ====
-For more information on {sle} Virtualization Guide, see https://documentation.suse.com/sles/15-SP4/html/SLES-all/book-virtualization.html.
+For more information on {sle} Virtualization Guide, see {sles-base-os-documentation}/book-virtualization.html.
 ====
 
 
