--- a/modules/installation-and-upgrade/pages/network-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/network-requirements.adoc
@@ -7,18 +7,18 @@ Fully Qualified Domain Name (FQDN)::
 The {productname} server must resolve its FQDN correctly.
 If the FQDN cannot be resolved, it can cause serious problems in a number of different components.
 +
-For more information about configuring the hostname and DNS, see https://documentation.suse.com/sles/15-SP4/html/SLES-all/cha-network.html#sec-network-yast-change-host.
+For more information about configuring the hostname and DNS, see {sles-base-os-documentation}/cha-network.html#sec-network-yast-change-host.
 
 Hostname and IP Address::
 To ensure that the {productname} domain name can be resolved by its clients, both server and client machines must be connected to a working DNS server.
 You also need to ensure that reverse lookups are correctly configured.
 +
-For more information about setting up a DNS server, see https://documentation.suse.com/sles/15-SP4/html/SLES-all/cha-dns.html.
+For more information about setting up a DNS server, see {sles-base-os-documentation}/cha-dns.html.
 
 Using a Proxy When Installing from {sle} Media::
 If you are on an internal network and do not have access to {scc}, you can set up and use a proxy during installation.
 +
-For more information about configuring a proxy for access to {scc} during a {sle} installation, see https://documentation.suse.com/sles/15-SP4/html/SLES-all/cha-boot-parameters.html#sec-boot-parameters-advanced-proxy.
+For more information about configuring a proxy for access to {scc} during a {sle} installation, see {sles-base-os-documentation}/cha-boot-parameters.html#sec-boot-parameters-advanced-proxy.
 
 
 [IMPORTANT]
