--- a/modules/specialized-guides/pages/large-deployments/tuning.adoc
+++ b/modules/specialized-guides/pages/large-deployments/tuning.adoc
@@ -633,7 +633,7 @@ If you see lines containing ``LOG:  temporary file:`` try raising this parameter
 | Value recommendation | 1-60. For 128{nbsp}GB of RAM, 10 is expected to give good results.
 | Location             | [path]``/etc/sysctl.conf``
 | Example              | `vm.swappiness = 20`
-| More information     | https://documentation.suse.com/sles/15-SP4/html/SLES-all/cha-tuning-memory.html#cha-tuning-memory-vm
+| More information     | {sles-base-os-documentation}/cha-tuning-memory.html#cha-tuning-memory-vm
 |===
 
 
