--- a/modules/administration/pages/infra-maintenance.adoc
+++ b/modules/administration/pages/infra-maintenance.adoc
@@ -32,8 +32,8 @@ For information about database schema upgrades and PostgreSQL migrations, see xr
 
 You can install updates using your package manager.
 
-* For information on using {yast}, see https://documentation.suse.com/sles/15-SP4/html/SLES-all/cha-onlineupdate-you.html.
-* For information on using zypper, see https://documentation.suse.com/sles/15-SP4/html/SLES-all/cha-sw-cl.html#sec-zypper.
+* For information on using {yast}, see {sles-base-os-documentation}/cha-onlineupdate-you.html.
+* For information on using zypper, see {sles-base-os-documentation}/cha-sw-cl.html#sec-zypper.
 
 
 By default, several update channels are configured and enabled for the {productname} Server.
