--- a/modules/installation-and-upgrade/pages/install-proxy.adoc
+++ b/modules/installation-and-upgrade/pages/install-proxy.adoc
@@ -68,7 +68,7 @@ The remaining storage space will be used by the operating system for the root pa
 
 For more information on installing {sles}, see:
 
-link:https://documentation.suse.com/sles/15-SP4/html/SLES-all/article-installation.html[].
+link:{sles-base-os-documentation}/article-installation.html[].
 
 
 
