azure addition to payg

--- a/modules/specialized-guides/nav-specialized-guides-guide.adoc
+++ b/modules/specialized-guides/nav-specialized-guides-guide.adoc
@@ -15,12 +15,19 @@ endif::[]
 *** {payg} Guide
 **** xref:public-cloud-guide/payg/payg-overview.adoc[{payg} Overview]
 **** {payg} on AWS
-***** xref:public-cloud-guide/payg/payg-aws-requirements.adoc[AWS requirements]
-***** xref:public-cloud-guide/payg/payg-public-cloud-images.adoc[1. Public Cloud Images]
-***** xref:public-cloud-guide/payg/payg-configure-the-image.adoc[2. Configuration and Startup]
-***** xref:public-cloud-guide/payg/payg-server-setup.adoc[3. Server Setup]
-***** xref:public-cloud-guide/payg/payg-webui-configuration.adoc[4. WebUI Configuration]
-***** xref:public-cloud-guide/payg/payg-connections-and-bootstrapping.adoc[5. Connecting Clients and Client Registration]
+***** xref:public-cloud-guide/payg/aws/payg-aws-requirements.adoc[AWS requirements]
+***** xref:public-cloud-guide/payg/aws/payg-aws-public-cloud-images.adoc[1. Public Cloud Images]
+***** xref:public-cloud-guide/payg/aws/payg-aws-configure-the-image.adoc[2. Configuration and Startup]
+***** xref:public-cloud-guide/payg/aws/payg-aws-server-setup.adoc[3. Server Setup]
+***** xref:public-cloud-guide/payg/aws/payg-aws-webui-configuration.adoc[4. WebUI Configuration]
+***** xref:public-cloud-guide/payg/aws/payg-aws-connections-and-bootstrapping.adoc[5. Connecting Clients and Client Registration]
+**** {payg} on Azure
+***** xref:public-cloud-guide/payg/azure/payg-azure-requirements.adoc[Azure requirements]
+***** xref:public-cloud-guide/payg/azure/payg-azure-public-cloud-images.adoc[1. Public Cloud Images]
+***** xref:public-cloud-guide/payg/azure/payg-azure-configure-the-image.adoc[2. Configuration and Startup]
+***** xref:public-cloud-guide/payg/azure/payg-azure-server-setup.adoc[3. Server Setup]
+***** xref:public-cloud-guide/payg/azure/payg-azure-webui-configuration.adoc[4. WebUI Configuration]
+***** xref:public-cloud-guide/payg/azure/payg-azure-connections-and-bootstrapping.adoc[5. Connecting Clients and Client Registration]
 *** xref:public-cloud-guide/payg-support.adoc[Public Cloud Support]
 ** xref:salt/salt-overview.adoc[Salt Guide]
 *** xref:salt/salt-terminology.adoc[Terminology]
