Added opecSUSE Leap Micro to the support matrix.

--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -60,10 +60,14 @@ ifeval::[{suma-content} == true]
 | {check}
 
 | {micro}
-| {x86_64}, {ppc64le}, {aarch64}
+| {x86_64}, {aarch64}, {s390x}
 | {check}
 
 | {opensuse} Leap 15
+| {x86_64}, {aarch64}
+| {check}
+
+| {opensuse} Leap {micro}
 | {x86_64}, {aarch64}
 | {check}
 
@@ -185,10 +189,14 @@ ifeval::[{uyuni-content} == true]
 | {check}
 
 | {micro}
-| {x86_64}, {ppc64le}, {aarch64}
+| {x86_64}, {aarch64}, {s390x}
 | {check}
 
 | {opensuse} Leap 15
+| {x86_64}, {aarch64}
+| {check}
+
+| {opensuse} Leap {micro}
 | {x86_64}, {aarch64}
 | {check}
 
