--- a/modules/installation-and-upgrade/pages/client-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/client-requirements.adoc
@@ -55,6 +55,10 @@ ifeval::[{suma-content} == true]
 | {x86_64}, {aarch64}
 | {check}
 
+| {opensuse} Leap {micro} 
+| {x86_64}, {aarch64}
+| {check}
+
 | {sll} 9
 | {x86_64}
 | {check}
@@ -177,6 +181,10 @@ ifeval::[{uyuni-content} == true]
 | {check}
 
 | {opensuse} Leap 15
+| {x86_64}, {aarch64}
+| {check}
+
+| {opensuse} Leap {micro}
 | {x86_64}, {aarch64}
 | {check}
 
