--- a/modules/installation-and-upgrade/pages/client-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/client-requirements.adoc
@@ -55,10 +55,6 @@ ifeval::[{suma-content} == true]
 | {x86_64}, {aarch64}
 | {check}
 
-| {opensuse} Leap {micro} 
-| {x86_64}, {aarch64}
-| {check}
-
 | {sll} 9
 | {x86_64}
 | {check}
@@ -184,7 +180,7 @@ ifeval::[{uyuni-content} == true]
 | {x86_64}, {aarch64}
 | {check}
 
-| {opensuse} Leap {micro}
+| {opensuse} Leap Micro
 | {x86_64}, {aarch64}
 | {check}
 
