--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -67,10 +67,6 @@ ifeval::[{suma-content} == true]
 | {x86_64}, {aarch64}
 | {check}
 
-| {opensuse} Leap {micro}
-| {x86_64}, {aarch64}
-| {check}
-
 | {sll} 9
 | {x86_64}
 | {check}
@@ -196,7 +192,7 @@ ifeval::[{uyuni-content} == true]
 | {x86_64}, {aarch64}
 | {check}
 
-| {opensuse} Leap {micro}
+| {opensuse} Leap Micro
 | {x86_64}, {aarch64}
 | {check}
 
