Adding support for SLE Micro 5.5/openSUSE Leap Micro 5.5.

--- a/modules/client-configuration/pages/clients-slemicro.adoc
+++ b/modules/client-configuration/pages/clients-slemicro.adoc
@@ -1,11 +1,7 @@
 [[clients-slemicro]]
 = Registering {micro} Clients
 
-This section contains information about registering clients running these {nbsp}{micro} operating systems:
-
-* {micro}{nbsp}5.1, 5.2, 5.3 and 5.4 {x86_64}
-* {micro}{nbsp}5.1, 5.2, 5.3 and 5.4 {arm64}
-* {micro}{nbsp}5.1, 5.2, 5.3 and 5.4 {zsystems} (s390x)
+This section contains information about registering clients running these {nbsp}{micro} operating systems 5.1, 5.2, 5.3, 5.4 and 5.5 {x86_64}, {arm64}, and {zsystems} (s390x).
 
 The {micro} is an ultra-reliable, lightweight operating system purpose built for edge computing.
 It leverages the enterprise hardened security and compliance components of SUSE Linux Enterprise and merges them with a modern, immutable, developer-friendly OS platform.
@@ -36,6 +32,15 @@ The products you need for this procedure are:
 
 | OS Version
 | Product Name
+
+| {micro} 5.5 {x86_64}
+| SUSE Linux Enterprise Micro 5.5 x86_64
+
+| {micro} 5.5 {arm64}
+| SUSE Linux Enterprise Micro 5.5 aarch64
+
+| {micro} 5.5 {s390x}
+| SUSE Linux Enterprise Micro 5.5 s390x
 
 | {micro} 5.4 {x86_64}
 | SUSE Linux Enterprise Micro 5.4 x86_64
@@ -91,6 +96,18 @@ The channels you need for this procedure are:
 | OS Version
 | Base Channel
 | Updates Channel
+
+| {micro} 5.5 {x86_64}
+| sle-micro-5.5-pool-x86_64
+| sle-micro-5.5-updates-x86_64
+
+| {micro} 5.5 {arm64}
+| sle-micro-5.5-pool-arm64
+| sle-micro-5.5-updates-arm64
+
+| {micro} 5.5 {zsystems} ({s390x})
+| sle-micro-5.5-pool-s390x
+| sle-micro-5.5-updates-s390x
 
 | {micro} 5.4 {x86_64}
 | sle-micro-5.4-pool-x86_64
