--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -52,7 +52,7 @@ ifeval::[{suma-content} == true]
 | {check}
 
 | {micro}
-| {x86_64}, {ppc64le}, {aarch64}
+| {x86_64}, {aarch64}, {s390x}
 | {check}
 
 | {opensuse} Leap 15
@@ -125,12 +125,17 @@ ifeval::[{uyuni-content} == true]
 | {check}
 
 | {micro}
-| {x86_64}, {ppc64le}, {aarch64}
+| {x86_64}, {aarch64}, {s390x}
 | {check}
 
 | {opensuse} Leap 15
 | {x86_64}, {aarch64}
 | {check}
+
+| {opensuse} Leap Micro
+| {x86_64}, {aarch64}
+| {check}
+
 // SUSE Liberty Linux not available at Uyuni for now
 //| {sles} ES 7
 //| {x86_64}
