--- a/modules/installation-and-upgrade/pages/client-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/client-requirements.adoc
@@ -116,6 +116,10 @@ ifeval::[{uyuni-content} == true]
 | {x86_64}, {aarch64}, {s390x}
 | {check}
 
+| {opensuse} Leap Micro
+| {x86_64}, {aarch64}
+| {check}
+
 | {opensuse} Leap 15
 | {x86_64}, {aarch64}
 | {check}
