--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -144,6 +144,10 @@ ifeval::[{uyuni-content} == true]
 | {cross}
 | {check}
 
+| {opensuse} Leap Micro
+| {x86_64}, {aarch64}
+| {check}
+
 | {opensuse} Leap 15
 | {x86_64}, {aarch64}
 | {check}
