--- a/modules/client-configuration/pages/clients-opensuseleapmicro.adoc
+++ b/modules/client-configuration/pages/clients-opensuseleapmicro.adoc
@@ -1,7 +1,7 @@
 [[clients-opensuseleapmicro]]
 = Registering {leapmicro} Clients
 
-This section contains information about registering clients running these {leapmicro} operating systems on {x86_64} and {aarch64} architectures.
+This section contains information about registering clients running {leapmicro} operating systems on {x86_64} and {aarch64} architectures.
 
 The {leapmicro} is an ultra-reliable, lightweight operating system purpose built for edge computing.
 It leverages the enterprise hardened security and compliance components of SUSE Linux Enterprise and merges them with a modern, immutable, developer-friendly OS platform.
