--- a/modules/client-configuration/pages/clients-slemicro.adoc
+++ b/modules/client-configuration/pages/clients-slemicro.adoc
@@ -1,7 +1,7 @@
 [[clients-slemicro]]
 = Registering {micro} Clients
 
-This section contains information about registering clients running these {nbsp}{micro} operating systems 5.1, 5.2, 5.3, 5.4 and 5.5 {x86_64}, {arm64}, and {zsystems} (s390x).
+This section contains information about registering clients running {micro} operating systems 5.1, 5.2, 5.3, 5.4, and 5.5 on {x86_64}, {arm64}, and {zsystems} (s390x) architectures.
 
 The {micro} is an ultra-reliable, lightweight operating system purpose built for edge computing.
 It leverages the enterprise hardened security and compliance components of SUSE Linux Enterprise and merges them with a modern, immutable, developer-friendly OS platform.
