add missing comma

--- a/modules/client-configuration/pages/client-upgrades.adoc
+++ b/modules/client-configuration/pages/client-upgrades.adoc
@@ -12,7 +12,7 @@ For more information, see xref:client-configuration:client-upgrades-major.adoc[]
 You can also automate client upgrades using the content lifecycle manager.
 For more information, see xref:client-configuration:client-upgrades-lifecycle.adoc[].
 
-For more information about product migration such as service pack upgrades openSUSE Leap minor version upgrades, or openSUSE Leap to {sle} migrations, see xref:client-configuration:client-upgrades-product-migration.adoc[].
+For more information about product migration such as service pack upgrades, openSUSE Leap minor version upgrades, or openSUSE Leap to {sle} migrations, see xref:client-configuration:client-upgrades-product-migration.adoc[].
 
 ifeval::[{uyuni-content} == true]
 For more information about upgrading unregistered openSUSE Leap clients, see xref:client-configuration:client-upgrades-uyuni.adoc[].
