more cosmetic typos

--- a/modules/client-configuration/pages/client-upgrades-major.adoc
+++ b/modules/client-configuration/pages/client-upgrades-major.adoc
@@ -113,9 +113,7 @@ Autoinstallation profiles contain all the installation and configuration data ne
 They can also contain scripts to be executed after the installation is complete.
 For example scripts that you can use as a starting point, see https://github.com/SUSE/manager-build-profiles/tree/master/AutoYaST.
 
-For valid AutoYaST upgrade settings, see
-
-link:https://doc.opensuse.org/projects/autoyast/#CreateProfile-upgrade[].
+For valid {ay} upgrade settings, see https://doc.opensuse.org/projects/autoyast/#CreateProfile-upgrade.
 
 
 
