continue with work on trad. vs. salt client

--- a/modules/client-configuration/pages/registration-cli.adoc
+++ b/modules/client-configuration/pages/registration-cli.adoc
@@ -1,5 +1,5 @@
 [[registering-clients-cli]]
-= Register on the Command Line (Salt)
+= Register on the Command Line
 
 == Manual Salt client registration
 
@@ -17,7 +17,7 @@ The systemd service filename is different.
 Bootstrapping this way will only work if you use the [package]``salt-minion`` being part of the client tools channels or of an official {suse} distributions.
 ====
 
-=== Salt Bundle configuration
+== Salt Bundle configuration
 
 Salt Bundle ([package]``venv-salt-minion``)::
 +
@@ -71,7 +71,7 @@ salt-key -a '<client>'
 --
 
 
-=== Salt Minion configuration
+== Salt Minion configuration
 
 Salt Minion ([package]``salt-minion``)::
 +
@@ -94,7 +94,8 @@ or:
 ----
 /etc/salt/minion.d/NAME.conf
 ----
-. In the file add or edit the FQDN of the {productname} Server or Proxy, and the activation key if any. Also add the other configuration parameters listed below.
+. In the file add or edit the FQDN of the {productname} Server or Proxy, and the activation key if any.
+  Also add the other configuration parameters listed below.
 +
 ----
 master: SERVER.EXAMPLE.COM
