continue with work on trad. vs. salt client

--- a/modules/client-configuration/pages/repositories.adoc
+++ b/modules/client-configuration/pages/repositories.adoc
@@ -14,7 +14,7 @@ For more information about custom repositories and channels, see xref:administra
 
 == Local Repository Locations
 
-You can configure local repositories on Salt clients, to provide packages that are not supplied by {productname} channels.
+You can configure local repositories on clients, to provide packages that are not supplied by {productname} channels.
 
 [WARNING]
 ====
@@ -25,7 +25,7 @@ This can lead to installing unexpected packages.
 
 Local repositories are disabled during onboarding.
 
-For Salt clients, local repositories will be disabled each time a channel state is executed.
+Local repositories will be disabled each time a channel state is executed.
 For example, when applying the highstate or performing a package action.
 
 If local repositories should stay enabled after onboarding the following pillar must be set for the affected Salt client:
