Amended the openSUSE Channels table for openSUSE Leap Micro clients.

--- a/modules/client-configuration/pages/clients-opensuseleapmicro.adoc
+++ b/modules/client-configuration/pages/clients-opensuseleapmicro.adoc
@@ -67,6 +67,21 @@ ifeval::[{uyuni-content} == true]
 
 |===
 
+
+ifeval::[{uyuni-content} == true]
+[[opensuse-leap-channels-cli]]
+[cols="1,1,1,1", options="header"]
+.{opensuse} Channels - CLI
+|===
+
+| OS Version               | openSUSE Leap Micro 5.5            | openSUSE Leap Micro 5.4        | openSUSE Leap Micro 5.3
+| Base Channel             | opensuse_micro5_5                  | opensuse_micro5_5              | opensuse_micro5_3
+| Client Channel           | opensuse_micro5_5-uyuni-client     | opensuse_micro5_4-uyuni-client | opensuse_micro5_4-uyuni-client
+| SLE Updates Channel      | opensuse_micro5_5-sle-updates      | opensuse_micro5_4-sle-updates  | opensuse_micro5_3-sle-updates
+
+|===
+
+
 include::snippets/addchannels_novendor_cli.adoc[]
 
 endif::[]
