No longer needed to single out salt clients

--- a/modules/client-configuration/pages/system-groups.adoc
+++ b/modules/client-configuration/pages/system-groups.adoc
@@ -9,8 +9,8 @@ For example, you could organize clients on which operating system is installed, 
 Clients can be in any number of groups, so you can define your groups in different ways.
 
 When you have clients organized into groups, you can perform updates on all clients in one or more groups, or on intersections between groups.
-For example, you can define one group for all Salt clients, and another group for all SLES clients.
-You can then perform updates on all Salt clients, or use the intersection between the groups, and update all Salt SLES clients.
+For example, you can define one group for all clients with web server software, and another group for all SLES clients.
+You can then perform updates on all clients with web server software, or use the intersection between the groups, and update all SLES clients with web server software.
 
 
 
@@ -68,7 +68,7 @@ Alternatively, you can see a graphical representation of your system groups by n
 == Work with Groups
 
 When you have your clients arranged into groups, you can use your groups to manage updates.
-For Salt clients, you can also apply states and formulas to all clients in a group.
+// For Salt clients, you can also apply states and formulas to all clients in a group.
 
 In the {productname} {webui}, navigate to menu:Systems[System Groups].
 The list shows an icon if there are updates available for any of the clients in the group.
@@ -80,5 +80,5 @@ Select the groups you want to work with, and click btn:[Work with union] to sele
 
 Alternatively, you can work on intersections of groups.
 Select two or more groups, and click btn:[Work with intersection] to select only those clients that exist in all the selected groups.
-For example, you might have one group for all Salt clients, and another group for all SLES clients.
-The intersection of these groups would be all Salt SLES clients.
+For example, you might have one group for all clients with web server software, and another group for all SLES clients.
+The intersection of these groups would be all SLES clients with web server software.
