Amazon Linux 2023 (for Uyuni) (#2590)

--- a/modules/client-configuration/pages/clients-amazon.adoc
+++ b/modules/client-configuration/pages/clients-amazon.adoc
@@ -17,9 +17,12 @@ endif::[]
 
 [WARNING]
 ====
-When created at AWS, {amazon} instances always have the same `machine-id` id at `/etc/machine-id`.
-Make sure you regenerate the `machine-id` after the instance is created.
+When created at AWS, {amazon} 2 instances always have the same `machine-id` id at `/etc/machine-id`.
+If you are creating {amazon} 2 instances, make sure you regenerate the `machine-id` after the instances are created.
 For more information, see xref:administration:troubleshooting/tshoot-registerclones.adoc[].
+ifeval::[{uyuni-content} == true]
+Amazon Linux 2023 is not affected by this.
+endif::[]
 ====
 
 
@@ -77,18 +80,28 @@ The channels you need for this procedure are:
 |===
 
 | OS Version
-| Core Channel
+| Base Channel
 | Client Channel
 
 | {amazon} 2
 | amazonlinux2-core
 | amazonlinux2-uyuni-client
 
+| {amazon} 2023
+| amazonlinux2023
+| amazonlinux2023-uyuni-client
+
 |===
+
 
 [NOTE]
 ====
-Make sure you also add and sync `amazonlinux2-extra-docker` channel if you plan to use Docker at your {amazon} instances.
+For {amazon} 2, make sure you also add and synchronize `amazonlinux2-extra-docker` channel if you plan to use Docker at your {amazon} instances.
+====
+
+[NOTE]
+====
+For {amazon} 2023, make sure you also add and synchronize `amazonlinux2023-kernel-livepatch` channel if you plan to use Kernel Live patches at your {amazon} instances.
 ====
 
 include::snippets/addchannels_novendor_cli.adoc[]
