continue with work on trad. vs. salt client

--- a/modules/client-configuration/pages/system-locking.adoc
+++ b/modules/client-configuration/pages/system-locking.adoc
@@ -6,26 +6,6 @@ For example, a system lock prevents a client from being updated or restarted.
 This is useful for clients running production software, or to prevent accidental changes.
 You can disable the system lock when you are ready to perform actions.
 
-System locks are implemented differently on traditional and Salt clients.
-
-
-
-== System Locks on Traditional Clients
-
-When a traditional client is locked, no actions can be scheduled using the {webui}, and a padlock icon is displayed next to the name of the client in the menu:System[System List].
-
-
-
-.Procedure: System Locking a Traditional Client
-. In the {productname} {webui}, navigate to the [guimenu]``System Details`` page for the client you want to lock.
-. Under [guimenu]``Lock Status``, click btn:[Lock this system].
-    The client remains locked until you click btn:[Unlock this system].
-
-//Something about requiring admin rights here maybe? --LKB 20200514
-
-Some actions can still be completed on locked traditional clients, including remote commands, and automated patch updates.
-To stop automated patch updates, navigate to the [guimenu]``System Details`` page for the client, and on the [guimenu]``Properties`` tab, uncheck [guimenu]``Auto Patch Update``.
-
 
 
 == System Locks on Salt Clients
@@ -58,10 +38,7 @@ For more information about blackout mode in Salt, see https://docs.saltstack.com
 == Package Locks
 
 Package locking can be used on several clients, but different feature sets are available.
-You must differentiate between:
-
-. {sle} and {opensuse} (zypp-based) versus {rhel} or {debian} clients, and
-. Traditional versus Salt clients.
+You must differentiate between {sle} and {opensuse} (zypp-based) versus {rhel} or {debian} clients.
 
 
 
@@ -74,10 +51,7 @@ Any attempt to install a locked package is reported as an error in the event log
 Locked packages cannot be installed, upgraded, or removed, neither through the {productname} {webui}, nor directly on the client machine using a package manager.
 Locked packages also indirectly lock any dependent packages.
 
-[NOTE]
-====
-Systems with the Zypper package manager have package locking available on traditional and Salt clients.
-====
+
 
 .Procedure: Using Package Locks
 . Navigate to the menu:Software[Packages > Lock] tab on the managed system to see a list of all available packages.
