--- a/modules/client-configuration/pages/virt-xenkvm.adoc
+++ b/modules/client-configuration/pages/virt-xenkvm.adoc
@@ -185,7 +185,7 @@ If you want your guests to be automatically registered as soon as they are insta
 This section gives instructions for adding a bootstrap script to an existing {ay} profile.
 
 For more information about creating a bootstrap script, see xref:client-configuration:registration-bootstrap.adoc[].
-For instructions on how to do this for {kickstart], refer to the Red Hat documentation for your installation.
+For instructions on how to do this for {kickstart}, refer to the Red Hat documentation for your installation.
 
 .Procedure: Adding a Bootstrap Script to an {ay} Profile
 
