--- a/modules/client-configuration/pages/virt-xenkvm.adoc
+++ b/modules/client-configuration/pages/virt-xenkvm.adoc
@@ -18,11 +18,14 @@ The way that you set up Xen or KVM on a VM host depends on operating system you 
 * For {suse} operating systems, see the SLES Virtualization Guide available from {sles-base-os-documentation}/book-virtualization.html.
 * For {rhel} operating systems, refer to the Red Hat documentation for your version.
 
-// FIXME
-// 2023-10-31, ke: better installing one of these patterns (kvm or xen)?
-//                 package name now libvirt-daemon something?
+The [systemitem]``Virtualization Host`` formula will help you with initializing the host.
+For more information, see xref:client-configuration:virt-xenkvm.adoc#virt-xenkvm-host-formula[].
+
+
+=== Background information
+
 {productname} uses [systemitem]``libvirt`` to install and manage guests.
-You must have the [package]``libvirtd`` package installed on your host.
+You must have the [package]``libvirt-daemon`` package installed on your host.
 In most cases, the default settings are sufficient and you do not need to adjust them.
 However, if you want to access the VNC console on your guests as a non-root user, you need to perform some configuration changes.
 For more information about how to set up the VNC console, see the documentation for your operating system.
@@ -34,6 +37,11 @@ For more on creating a bootstrap script, see xref:client-configuration:registrat
 
 When the bootstrap script is ready, use it to register the host with the {productname} Server.
 For more information about client registration, see xref:client-configuration:registration-overview.adoc[].
+
+
+
+[[virt-xenkvm-host-formula]]
+=== Initialize [systemitem]``Virtualization Host``
 
 With the [systemitem]``Virtualization Host`` formula, initialize the host:
 
@@ -52,22 +60,17 @@ With the [systemitem]``Virtualization Host`` formula, initialize the host:
 systemctl restart salt-minion
 ----
 
-////
-// FIXME: 2023-11-02, ke: Is this also stil possible? :
-Alternatively, the [systemitem]``Virtualization Host`` entitlement can be added at the registration key level.
-////
 
 
 
 [[virt-xenkvm-autoinst]]
-== Autoinstallation
+== Autoinstall VM Guests
 
 You can use {ay} or {kickstart} to automatically install and register Xen and KVM guests.
 
 You need an activation key for the VM host you want to register the guests to, and for each guest.
 The activation key must have the [systemitem]``provisioning`` and [systemitem]``Virtualization Platform`` entitlements.
 // FIXME: Does Salt require sth special?
-// The activation key must also have access to the [package]``mgr-virtualization-host`` and  [package]``mgr-osad`` packages.
 For more information about creating activation keys, see xref:client-configuration:activation-keys.adoc[].
 
 If you want to automatically register the guests with {productname} after installation, you need to create a bootstrap script.
@@ -192,14 +195,14 @@ If you want your guests to be automatically registered as soon as they are insta
 This section gives instructions for adding a bootstrap script to an existing {ay} profile.
 
 For more information about creating a bootstrap script, see xref:client-configuration:registration-bootstrap.adoc[].
-For instructions on how to do this for {kickstart], refer to the Red Hat documentation for your installation.
+For instructions on how to do this for {kickstart}, refer to the Red Hat documentation for your installation.
 
 .Procedure: Adding a Bootstrap Script to an {ay} Profile
 
 . Ensure your bootstrap script contains the activation key for the VM guests you want to register with it, and that is located on the host at [path]``/srv/www/htdocs/pub/bootstrap_vm_guests.sh``.
 . In the {productname} {webui}, navigate to menu:Systems[Autoinstallation > Profiles], and select the {ay} profile to associate this script with.
 . In the [guimenu]``File Contents`` field, add this snippet at the end of the file, immediately before the closing ``</profile>`` tag.
-    Ensure you replace the example IP address in the snippet with the correct IP address for your {productname} Server:
+    Ensure you replace the example IP address [literal]``192.168.1.1``in the snippet with the correct IP address for your {productname} Server:
 +
 ----
 <scripts>
@@ -207,7 +210,7 @@ For instructions on how to do this for {kickstart], refer to the Red Hat documen
     <script>
       <interpreter>shell </interpreter>
       <location>
-        http://`192.168.1.1`/pub/bootstrap/bootstrap_vm_guests.sh
+        http://192.168.1.1/pub/bootstrap/bootstrap_vm_guests.sh
       </location>
     </script>
   </init-scripts>
@@ -247,8 +250,7 @@ If a guest installation starts while another one is still running, the running i
 
 == Manage VM Guests
 
-
-You can use the {productname} {webui} to manage your VM Guests, including actions like shutting down, restarting, and adjusting CPU and memory allocations.
+You can use the {productname} {webui} to manage your VM Guests, including actions like shutting down, restarting, and adjusting CPU, and memory allocations.
 
 To do this, you need your Xen or KVM VM host registered to the {productname} Server, and have the [daemon]``libvirtd`` service running on the host.
 
