--- a/modules/client-configuration/pages/repositories.adoc
+++ b/modules/client-configuration/pages/repositories.adoc
@@ -28,7 +28,7 @@ Local repositories are disabled during onboarding.
 Local repositories will be disabled each time a channel state is executed.
 For example, when applying the highstate or performing a package action.
 
-If local repositories should stay enabled after onboarding the following pillar must be set for the affected Salt client:
+If local repositories should stay enabled after onboarding, the following pillar must be set for the affected client:
 
 Edit the ``/srv/pillar/top.sls`` file:
 
