--- a/modules/client-configuration/pages/registration-bootstrap.adoc
+++ b/modules/client-configuration/pages/registration-bootstrap.adoc
@@ -135,7 +135,7 @@ ORG_GPG_KEY=
 
 [NOTE]
 ====
-By default, bootstrap script will try to install [package]``venv-salt-minion`` if it's available in the bootstrap repository and [package]``salt-minion`` if there is no Salt bundle in the bootstrap repository.
+By default, bootstrap script will try to install [package]``venv-salt-minion`` if it is available in the bootstrap repository and [package]``salt-minion`` if there is no {salt} bundle in the bootstrap repository.
 It is posible to avoid installing Salt bundle and keep using [package]``salt-minion`` if you need it for some reason.
 
 For more information, see xref:client-configuration:contact-methods-saltbundle.adoc[Salt Bundle].
