--- a/modules/client-configuration/pages/registration-cli.adoc
+++ b/modules/client-configuration/pages/registration-cli.adoc
@@ -17,7 +17,7 @@ The systemd service filename is different.
 Bootstrapping this way will only work if you use the [package]``salt-minion`` being part of the client tools channels or of an official {suse} distributions.
 ====
 
-== Salt Bundle configuration
+== {salt} Bundle configuration
 
 Salt Bundle ([package]``venv-salt-minion``)::
 +
