--- a/modules/client-configuration/pages/registration-cli.adoc
+++ b/modules/client-configuration/pages/registration-cli.adoc
@@ -19,7 +19,7 @@ Bootstrapping this way will only work if you use the [package]``salt-minion`` be
 
 == {salt} Bundle configuration
 
-Salt Bundle ([package]``venv-salt-minion``)::
+{salt} Bundle ([package]``venv-salt-minion``)::
 +
 * [path]``/etc/venv-salt-minion/``
 * [path]``/etc/venv-salt-minion/minion``
