--- a/modules/client-configuration/pages/registration-cli.adoc
+++ b/modules/client-configuration/pages/registration-cli.adoc
@@ -71,7 +71,7 @@ salt-key -a '<client>'
 --
 
 
-== Salt Minion configuration
+== {salt} Minion configuration
 
 Salt Minion ([package]``salt-minion``)::
 +
