--- a/modules/client-configuration/pages/registration-cli.adoc
+++ b/modules/client-configuration/pages/registration-cli.adoc
@@ -73,7 +73,7 @@ salt-key -a '<client>'
 
 == {salt} Minion configuration
 
-Salt Minion ([package]``salt-minion``)::
+{salt} Minion ([package]``salt-minion``)::
 +
 * [path]``/etc/salt/``
 * [path]``/etc/salt/minion``
