--- a/modules/client-configuration/pages/clients-opensuseleapmicro.adoc
+++ b/modules/client-configuration/pages/clients-opensuseleapmicro.adoc
@@ -59,9 +59,9 @@ ifeval::[{uyuni-content} == true]
 .{opensuse} Channels - CLI
 |===
 
-| OS Version               | openSUSE Leap Micro 5.5            | openSUSE Leap Micro 5.4        | openSUSE Leap Micro 5.3
-| Base Channel             | opensuse_micro5_5                  | opensuse_micro5_4              | opensuse_micro5_3
-| Client Channel           | opensuse_micro5_5-uyuni-client     | opensuse_micro5_4-uyuni-client | opensuse_micro5_3-uyuni-client
+| OS Version               | {leapmicro} 5.5                    | {leapmicro} 5.4                | {leapmicro} 5.3
+| Base Channel             | opensuse_micro5_5                  | opensuse_micro5_5              | opensuse_micro5_3
+| Client Channel           | opensuse_micro5_5-uyuni-client     | opensuse_micro5_4-uyuni-client | opensuse_micro5_4-uyuni-client
 | SLE Updates Channel      | opensuse_micro5_5-sle-updates      | opensuse_micro5_4-sle-updates  | opensuse_micro5_3-sle-updates
 
 |===
