--- a/modules/client-configuration/pages/snippets/trust_gpg.adoc
+++ b/modules/client-configuration/pages/snippets/trust_gpg.adoc
@@ -6,7 +6,7 @@ But third party packages signed by a different GPG key need manual handling.
 The clients can be successfully bootstrapped without the GPG key being trusted.
 However, you cannot install new client tool packages or update them until the keys are trusted.
 
-Salt clients now use GPG key information entered for a software channel to manage the trusted keys.
+Clients now use GPG key information entered for a software channel to manage the trusted keys.
 When a software channel with GPG key information is assigned to a client, the key is trusted when the channel is refreshed or the first package is installed from this channel.
 
 The GPG key URL parameter in the software channel page can contain multiple key URLs separated by "whitespace".
@@ -17,7 +17,7 @@ The GPG keys for the Client Tools Channels of {redhat} based clients are deploye
 // SUSE Liberty Linux not available at Uyuni for now
 
 ifeval::[{suma-content} == true]
-Same is the case with the GPG keys of  Expanded Support clients.
+Same is the case with the GPG keys of {sll} clients.
 endif::[]
 
 Only in case a software channel is assigned to the client they will be imported and trusted by the system.
