--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -40,6 +40,7 @@ endif::[]
 ** xref:monitoring.adoc[Monitoring with Prometheus and Grafana]
 ** xref:organizations.adoc[Organizations]
 ** xref:patch-management.adoc[Patch Management]
+** xref:ptfs.adoc[Program temporary files]
 ** xref:reports.adoc[Reports Generation]
 ** Security
 *** xref:master-fingerprint.adoc[Master Fingerprint]
@@ -55,7 +56,6 @@ endif::[]
 ** xref:task-schedules.adoc[Task Schedules]
 ** xref:tuning-changelogs.adoc[Tuning Changelogs]
 ** xref:users.adoc[Users]
-** xref:ptfs.adoc[PTFs]
 ** xref:troubleshooting/tshoot-intro.adoc[Troubleshooting]
 *** xref:troubleshooting/tshoot-autoinstallation.adoc[Autoinstallation]
 *** xref:troubleshooting/tshoot-bare-metal-systems.adoc[Bare Metal Systems]
