--- a/modules/reference/pages/spacecmd/troubleshooting-spacecmd.adoc
+++ b/modules/reference/pages/spacecmd/troubleshooting-spacecmd.adoc
@@ -1,14 +1,13 @@
 [[ref-spacecmd-tshooting]]
 = Troubleshooting spacecmd
 
+
 This section provides troubleshooting solutions when working with spacecmd
 
-== Creating a Distribution With spacecmd Sets Localhost Instead of FQDN
-
-The support article associated with this issue may be located at link:https://www.suse.com/support/kb/doc/?id=7018627[]
+== Creating a distribution wiere ``spacecmd`` sets ``localhost`` instead of FQDN
 
 Situation::
-When creating a distribution with spacecmd it will  automatically set [literal]``localhost`` as the server name instead of the FQDN of SUSE Manager.
+When creating a distribution with spacecmd it will automatically set [literal]``localhost`` as the server name instead of the FQDN of {productname}.
 This will result in the following kernel option being written:
 
 [source]
@@ -38,12 +37,15 @@ has been created and the server name option was set to [literal]``localhost``.
 
 
 
-== Spacecmd not Accepting Commands or Options
+== ``spacecmd`` not accepting commands or options
 
 
-When running [command]``spacecmd`` non-interactively, you must escape arguments passed to the command.
-Always put ``--`` before arguments, to avoid them being treated as global arguments.
-Additionally, make sure you escape any quotes that you pass to the functions so that they are not interpreted.
+When running [command]``spacecmd`` non-interactively:
+
+* you must escape arguments passed to the command.
+* always put ``--`` before arguments, to avoid them being treated as global arguments.
+* make sure you escape any quotes that you pass to the functions so that they are not interpreted.
+
 An example of a well-formed [command]``spacecmd`` command:
 
 [source]
@@ -53,11 +55,13 @@ spacecmd -s server1 -- softwarechannel_create -n \'My Channel\' -l channel1 -a x
 
 
 
-== Spacecmd caching problems
+== ``spacecmd`` caching problems
 
 
 The [command]``spacecmd`` command keeps a cache of the various systems and packages that you have installed.
 Sometimes, this can result in a mismatch between the system name and the system ID.
+
+
 To clear the [command]``spacecmd`` cache, use this command:
 
 [source]
